--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+samples/
+imagenet_code_c2i_flip_ten_crop/
+results/
+results_tpn_multicross/
+results_tpnv2/
+results_v3/
+*.npy
